--- a/assets/style.css
+++ b/assets/style.css
@@ -16,10 +16,10 @@ body{
 a{
     text-decoration: none;
 }
-/* img{
+img{
     max-width: 100%;
     height: auto;
-} */
+}
 .container{
     display: flex;
     justify-content: center;
@@ -28,7 +28,7 @@ a{
 }
 
 .container h2{
-    font-size: 2.8rem;
+    font-size: 2rem;
     line-height: 2em;
     color: #fff;
     filter: drop-shadow(1px 1px 10px #fff);
